# rest-server

./: .travis.yml  CMakeLists.txt  Dockerfile  Makefile  MakefileDebug  README.md  build.sh  main.c  sonar-project.properties  test.sh
include/: config.h.in
scripts/: config.py  data.py  status.py  utils.py
src/: CMakeLists.txt  main.c
test/: docker-compose.yml.tpl
test/request/: Dockerfile  start.sh
