# Server

link_directories(${CMAKE_INSTALL_PREFIX}/lib ${CMAKE_CURRENT_BINARY_DIR} )
include_directories (${CMAKE_INSTALL_PREFIX}/include ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_BINARY_DIR}/include )

add_executable (main main.c)

install(DIRECTORY DESTINATION ${CMAKE_INSTALL_PREFIX} DIRECTORY_PERMISSIONS
        OWNER_WRITE OWNER_READ OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)

install(DIRECTORY DESTINATION bin DIRECTORY_PERMISSIONS
        OWNER_WRITE OWNER_READ OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)

install(TARGETS main DESTINATION bin PERMISSIONS
        OWNER_WRITE OWNER_READ OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE)
